# machine_translation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  main.py  pyproject.toml  test.py
.github/workflows/: init.yml
notebooks/: download_data.ipynb  eda.ipynb  extract_data.ipynb  train.ipynb  train_torch.ipynb
src/: test.py
src/data/datamodules/: __init__.py  data_module.py
src/data/datasets/: dense_dataset.py  sparse_dataset.py
src/datasets/: base_dataset.py  dataset_factory.py
src/lightning/: __init__.py  lightning_model.py
src/models/: __init__.py
src/models/sentence_classifier/: __init__.py  tokenizer.py  vectorizer.py
src/models/transformers/: blocks.py  decoder.py  encoder.py  multihead_attention.py  transformer.py
src/text_classifier/config/: config.py
src/text_classifier/data/datasets/: __init__.py
src/text_classifier/data/text_processing/: config.py  embedding_enums.py  tokenizer.py  vectorizer.py
src/text_classifier/models/: __init__.py
src/text_classifier/models/transformers/: decoder.py  encoder.py  multihead_attention.py  transformer.py
src/text_classifier/utils/: __init__.py  decorators.py  load_params.py
src/utils/: __init__.py  load_params.py  tokenizer.py  vectorizer.py
tests/: conftest.py  data_fixtures.py  model_fixtures.py  test_data.py  test_model.py  test_models.py  test_transformer.py  test_vectorizer.py
