[tool.poetry]
name = "machine-translation"
version = "0.1.0"
description = ""
authors = ["Isangulov Marat <marathon.our@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.1.1"
mypy = "^1.0.1"
pytest = "^7.2.1"
torch = [
    {markers = "sys_platform == 'darwin'", version="^1.13.1"},
    {markers = "sys_platform == 'linux' and platform_machine == 'arm64'", url="https://download.pytorch.org/whl/torch-1.13.0-cp310-cp310-manylinux2014_aarch64.whl"},
    {markers = "sys_platform == 'linux' and platform_machine == 'x86_64'", url="https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-linux_x86_64.whl"},
]
torchtext = "^0.14.1"
setuptools = "^67.4.0"
ipykernel = "^6.21.2"
wheel = "^0.38.4"
spacy = "^3.5.0"
wandb = "^0.13.10"
clearml = "^1.9.2"
scikit-learn = "^1.2.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E203', 'W503']
per-file-ignores = [
    'tests/test_vectorizer.py:F811,F401',
]
max-line-length = 88
